# MusicFreePluginsHub

./: pyproject.toml
.github/workflows/: Schedule.yml
src/: main.py
