[project]
name = "MusicFreePluginsHub"
version = "0.1.0"
description = "MusicFree 插件订阅聚合器 - 订阅全网"
authors = [
    { name = "xxnuo", email = "pip@2020818.xyz" },
    { name = "GuGuMur", email = "2221533105@qq.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

[tool.poetry.dependencies]
ujson = "^5.0.0"
uvicorn = "^0.22.0"

[tool.poetry]
packages = [
    { include = "src" }
]